@@ -8,8 +8,67 @@ author:
     affiliation: Functional Genomics Center Zurich
 date: "`r doc_date()`"
 package: "`r pkg_ver('specL')`"
-bibliography:
-  - specL.bib
+references:
+- id: bfabric
+  title: "B-Fabric: the Swiss Army Knife for life sciences"
+  author:
+  - given: Can 
+    family: Türker
+  - given: Fuat 
+    family: Akal
+  - given: Dieter 
+    family: Studer-Joho
+  - given: Christian 
+    family: Panse                
+  - given: Simon 
+    family: Barkow-Oesterreicher
+  - given: Hubert 
+    family: Rehrauer
+  - given: Ralph 
+    family: Schlapbach
+  container-title: EDBT 2010, 13th International Conference on Extending Database Technology, Lausanne, Switzerland, March 22-26, 2010, Proceedings
+  volume: 11
+  URL: 'http://doi.acm.org/10.1145/1739041.1739135'
+  DOI: 10.1145/1739041.1739135
+  page: 717-720
+  type: article-journal
+  issued:
+    year: 2010
+    month: 3
+- id: pmid25712692
+  title: "specL—an R/Bioconductor package to prepare peptide spectrum matches for use in targeted proteomics"
+  author:
+  - given: Christian 
+    family: Panse   
+  - given: Christian
+    family: Trachsel
+  - given: Jonas
+    family: Grossmann
+  - given: Ralph 
+    family: Schlapbach
+  container-title: Bioinformatics
+  volume: 31
+  URL: 'http://dx.doi.org/10.1093/bioinformatics/btv105'
+  DOI: 10.1093/bioinformatics/btv105
+  number: 13
+  page: 2228-2231
+  type: article-journal
+  issued:
+    year: 2015
+    month: 7
+- id: pmid18428681
+  title: Using BiblioSpec for Creating and Searching Tandem MS Peptide Libraries
+  author:
+  - family: Frewen
+    given: Barbara , 
+  - given: Michael J. 
+    family: MacCoss
+  container-title: Curr Protoc Bioinformatics
+  DOI: 10.1002/0471250953.bi1307s20
+  type: article-journal
+  issued:
+    year: 2007
+    month: 12
 abstract: >
   This files contains all the commands performing a default SWATH ion library
   generation at the FGCZ. This document is usually triggered by the bfabric 
@@ -22,8 +81,6 @@ output:
   BiocStyle::html_document2
 ---
 
-
-
 # Requirements
 
 In a first step, the peptide identification result is generated by a standard 
@@ -32,14 +89,12 @@ software. [@pmid18428681].
 
 
 For generating the ion library the  `r Biocpkg('specL')` is used. The workflow is
-described in [@specLBioInf].
+described in [@pmid25712692].
 
 The following R packages has to be installed on the compute box.
 
 ```{r}
 library(specL)
-# library(Matrix)
-# library(prozor)
 ```
 
 This file can be rendered by useing the following code snippet.
@@ -48,8 +103,12 @@ This file can be rendered by useing the following code snippet.
 library(rmarkdown)
 library(BiocStyle)
 report_file <- tempfile(fileext='.Rmd'); 
-file.copy(system.file("doc", "report.Rmd", package = "specL"), report_file); 
-rmarkdown::render(report_file, output_format='html_document', output_file='/tmp/report_specL.html')
+file.copy(system.file("doc", "report.Rmd", 
+                      package = "specL"), 
+          report_file); 
+rmarkdown::render(report_file, 
+                  output_format='html_document', 
+                  output_file='/tmp/report_specL.html')
 ```       
 
 
@@ -76,13 +135,14 @@ if(!exists("INPUT")){
     FRAGMENTIONMZRANGE = c(300, 1250),
     FRAGMENTIONRANGE = c(5, 200),
     NORMRTPEPTIDES = specL::iRTpeptides,
-    OUTPUT_LIBRARY_FILE = tempfile()
+    OUTPUT_LIBRARY_FILE = tempfile(),
+    ANNOTATE = TRUE
     )
 } 
 ```
 
 The library generation workflow was performed using the following parameters:
-```{r echo=FALSE}
+```{r echo=FALSE, eval=FALSE}
   cat(
   " MASCOTSCORECUTOFF = ", INPUT$MASCOTSCORECUTOFF, "\n",
   " BLIB_FILTERED_FILE = ", INPUT$BLIB_FILTERED_FILE, "\n",
@@ -98,8 +158,14 @@ The library generation workflow was performed using the following parameters:
 ```
 
 ```{r echo=FALSE, results='asis'}
-# library(knitr)
+library(knitr)
 # kable(t(as.data.frame(INPUT)))
+ii <- ((lapply(INPUT, function(x){ if(typeof(x) %in% c("character", "double")){paste(x, collapse = ', ')}else{NULL} } )))
+
+
+parameter <- as.data.frame(unlist(ii))
+names(parameter) <- 'parameter.values'
+kable(parameter, caption = 'used INPUT parameter')
 ```
 
 ## Define the fragment ions of interest
@@ -140,40 +206,43 @@ After processing the psm using bibliospec the protein information is gone.
 
 The `read.fasta` function is provided by the CRAN package `r CRANpkg("seqinr")`.
 
-```{r}
-FASTA <- read.fasta(INPUT$FASTA_FILE, 
+```{r read.fasta}
+if(INPUT$ANNOTATE){
+  FASTA <- read.fasta(INPUT$FASTA_FILE, 
                     seqtype = "AA", 
-                    as.string=TRUE)
+                    as.string = TRUE)
 
-
-
-BLIB_FILTERED <- annotate.protein_id(BLIB_FILTERED, fasta=FASTA)
+  BLIB_FILTERED <- annotate.protein_id(BLIB_FILTERED, 
+                                       fasta = FASTA)
+}
 ```
 
 
-## Peptides used for RT nSormalization
+## Peptides used for RT normalization
 
 
 The following peptides are used for the RT normalization. The last column 
 indicates by FALSE/TRUE if a peptides is included in the data. The rows were 
 ordered by the RT values.
 
-```{r echo=FALSE, results='asis'}
+```{r checkIRTs, echo=FALSE, results='asis'}
 library(knitr)
+incl <-  INPUT$NORMRTPEPTIDES$peptide %in% sapply(BLIB_REDUNDANT, function(x){x$peptideSequence})
+INPUT$NORMRTPEPTIDES$included <- incl
 
-INPUT$NORMRTPEPTIDES$included <- INPUT$NORMRTPEPTIDES$peptide %in% sapply(BLIB_REDUNDANT, function(x){x$peptideSequence})
-res <- INPUT$NORMRTPEPTIDES[order(INPUT$NORMRTPEPTIDES$rt),]
-# row.names(res) <- 1:nrow(res)
-kable(res, caption='peptides used for RT normaization.')
+if (sum(incl) > 0){
+  res <- INPUT$NORMRTPEPTIDES[order(INPUT$NORMRTPEPTIDES$rt),]
+  # row.names(res) <- 1:nrow(res)
+  kable(res, caption='peptides used for RT normaization.')
+}
 ```
 
 
 
 # Generate the ion library
 
-
-```{r message=FALSE}
-specLibrary <<- specL::genSwathIonLib(
+```{r specL::genSwathIonLib, message=FALSE}
+specLibrary <- specL::genSwathIonLib(
   data = BLIB_FILTERED,
   data.fit = BLIB_REDUNDANT,
   max.mZ.Da.error = INPUT$MZ_ERROR,
@@ -193,7 +262,7 @@ The size of the generated ion library is __`r length(specLibrary@ionlibrary)`__.
 That means that __`r round(length(specLibrary@ionlibrary)/length(BLIB_FILTERED) * 100, 2)`__ % of the unique precursors fullfilled the filtering criteria.
 
 
-```{r}
+```{r summary}
 summary(specLibrary)
 ```
 
@@ -217,10 +286,9 @@ plot(specLibrary)
 
 # Output
 
-```{r eval=TRUE}
+```{r write.spectronaut, eval=TRUE}
 write.spectronaut(specLibrary, file =  INPUT$OUTPUT_LIBRARY_FILE)
 ```
-
 
 # Remarks
 
