@@ -1,3 +1,6 @@
+%\VignetteIndexEntry{references}
+
+
 % 22261725 
 @Article{SWATH,
    Author="Gillet, L. C.  and Navarro, P.  and Tate, S.  and Rost, H.  and Selevsek, N.  and Reiter, L.  and Bonner, R.  and Aebersold, R. ",
